--- a/app/templates/handling_events.handlebars
+++ b/app/templates/handling_events.handlebars
@@ -8,7 +8,7 @@
       <li>The <code>ApplicationGestureManager</code> instance is blocked.</li>
       <li>A non-simultaneously gesture different than the <i>view gesture</i> is being recognized.</li>
       <li>The <i>view gesture</i> is not enabled.</li>
-      <li>The <code>GestureDelegate</code> of the <i>view gesture</i> has assigned at least one <code>DelegateRule</code> whose <code>shouldReceiveTouch</code> response is false.</li>
+      <li>The <code>GestureDelegate</code> of the <i>view gesture</i> has assigned at least one <code>GestureDelegateRule</code> whose <code>shouldReceiveTouch</code> response is false.</li>
       <li>The <code>GestureDelegate</code> hasn't rules whose responses affect the result and its <code>shouldReceiveTouch</code> response is false.</li>
     </ol>
   </div>
