--- a/app/templates/index.handlebars
+++ b/app/templates/index.handlebars
@@ -14,7 +14,7 @@
               <h2>Touch Ready</h2>
               <p>Use high-level gestures in your webapp to provide richer
                 user experiences. Easily integrate native gestures such as
-                Tap, TouchHold, Pinch, Swipe or Pan.</p>
+                Tap, TouchHold, Pinch, Swipe, Pan and Press.</p>
         </div>
 
         <div class="span4">
