--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -20,7 +20,7 @@
               <ul class="nav nav-list">
                 <li class="nav-header">Docs</li>
                 {{view App.NavItemView linkState="usingGestures" content="Using Gestures"}}
-                {{view App.NavItemView linkState="createOwnGestures" content="Create Own Gestures"}}
+                {{view App.NavItemView linkState="createOwnGestures" content="Create Custom Gestures"}}
                 {{view App.NavItemView linkState="handlingEvents" content="Handling Events"}}
                 {{view App.NavItemView linkState="objectResponsabilities" content="Object Responsabilities"}}
                 <li class="nav-header">Examples of Gestures</li>
@@ -30,9 +30,9 @@
                 <li class="nav-header">Examples of Coordination</li>
                 {{view App.NavItemView linkState="applicationGestureManager" content="Application Gesture Manager"}}
                 {{view App.NavItemView linkState="simultaneously" content="Simultaneously"}}
-                {{view App.NavItemView linkState="isEnabled" content="Gesture IsEnabled"}} 
-                {{view App.NavItemView linkState="gestureDelegateRules" content="Gesture Delegate Rules"}} 
-                {{view App.NavItemView linkState="gestureDelegate" content="Gesture Delegate"}} 
+                {{view App.NavItemView linkState="isEnabled" content="Gesture IsEnabled"}}
+                {{view App.NavItemView linkState="gestureDelegateRules" content="Gesture Delegate Rules"}}
+                {{view App.NavItemView linkState="gestureDelegate" content="Gesture Delegate"}}
                 <li class="nav-header">API</li>
                 <li><a href="/api/index.html">YuiDoc</a></li>
               </ul>
