Small corrections in website docs

--- a/app/templates/application_gesture_manager.handlebars
+++ b/app/templates/application_gesture_manager.handlebars
@@ -1,6 +1,6 @@
 
 <div class="alert alert-info">
-  <p>You could block Application gestures recognition with <code>App.gestureManager.isAllBlocked</code> property. Toggle the button and test the views at the right side.</p>
+  <p>You could block Application gestures recognition with the <code>App.gestureManager.isAllBlocked</code> property. Toggle the button and test the views at the right side.</p>
 </div>
 
 
