--- a/app/templates/gesture_delegate.handlebars
+++ b/app/templates/gesture_delegate.handlebars
@@ -1,6 +1,6 @@
 
 <div class="alert alert-info">
-  A <code>GestureDelegate</code> allows/denies to forward touchEvents to gestures based on its <code>shouldReceiveTouch</code> implementation. The delegate of this example allow the gesture whenever the "button" counter is multiple of 3 (3, 6, 9, 12...)
+  A <code>GestureDelegate</code> allows/denies to forward touchEvents to gestures based on its <code>shouldReceiveTouch</code> implementation. The delegate of this example allows the gesture whenever the button counter is multiple of 3 (3, 6, 9, 12...)
 </div>
 
 
