--- a/app/templates/handling_events.handlebars
+++ b/app/templates/handling_events.handlebars
@@ -29,7 +29,7 @@
   <div class="span11">
     <p>Views can define touch handlers (<code>touchStart</code>, <code>touchMove</code>, <code>touchCancel</code>, <code>touchEnd</code>) in the same way than other event handlers. These events will be always dispatched to the views.</p>
     <blockquote>
-      <p>Normally, you will use these methods to prevent default event behaviour in gesturable views.</p>
+      <p>Normally, these methods will be used to prevent default event behaviour in gesturable views.</p>
     </blockquote>
 
     <pre>
