--- a/app/templates/is_enabled.handlebars
+++ b/app/templates/is_enabled.handlebars
@@ -1,6 +1,6 @@
 
 <div class="alert alert-info">
-  <p>You could manage a gesture recognition based on its <code>isEnabled</code> property. Toggle the button to change their values and test the views at the right side.</p>
+  <p>You could manage a gesture recognition based on its <code>isEnabled</code> property. Toggle the button to change values and test the views at the right side.</p>
 </div>
 
 
@@ -27,7 +27,7 @@
 
 
 
-  {{#view App.IsEnabledButtonView class="span6" 
+  {{#view App.IsEnabledButtonView class="span6"
     isEnabledBinding="panIsEnabled"}}
     {{#if view.isEnabled}}
       Pan gesture is enabled
