--- a/app/templates/object_responsabilities.handlebars
+++ b/app/templates/object_responsabilities.handlebars
@@ -41,9 +41,9 @@
     <p>Including <strong>ember-touch</strong> in your project, automatically extends the view <code>init</code> method to assign a <code>GestureManager</code> instance to each view.</p>
     <p>The <code>GestureManager</code> responsabilities are:</p>
     <ol>
-      <li>Receives touch events.</li>
+      <li>Receiving touch events.</li>
       <li>Dispatching the event to its view if it implements the given touch event handler.</li>
-      <li>Dispatch the event to the multiple view gesture instances, whenever all different coordination rules are satified.</li>
+      <li>Dispatching the event to the multiple view gesture instances, whenever all different coordination rules are satified.</li>
       <li>Handling event bubbling.</li>
     </ol>
   </div>
