--- a/app/templates/simultaneously.handlebars
+++ b/app/templates/simultaneously.handlebars
@@ -1,6 +1,6 @@
 
 <div class="alert alert-info">
-  <p>You could configure your gestures to be able to be recognized simultaneously with other gestures or being the only one recognized at the same time with its <code>simultaneously</code> property. Test it in the PanGesture of the red box.</p>
+  <p>You could configure a gesture to be able to be recognized simultaneously with other gestures or being the only one recognized at the same time with its <code>simultaneously</code> property. Test it in the PanGesture of the red box.</p>
 </div>
 
 
