Fix typo in doc

--- a/app/templates/object_responsabilities.handlebars
+++ b/app/templates/object_responsabilities.handlebars
@@ -1,7 +1,7 @@
 
 <div class="row-fluid">
 
-  <h2 name="gesture">ApplicationGestureManager</h2>
+  <h2 name="gesture">Gesture</h2>
   <div class="span11">
     <p><code>Gesture</code> coalesces multiple touch events into a <strong>single higher-level gesture event</strong>.</p>
     <p>For example, a tap gesture recognizer takes information about a touchstart event, a few touchmove events, and a touchend event and uses some heuristics to decide whether or not that sequence of events qualifies as a tap event. If it does, it will notify the view with a higher-level tap event.</p>
