--- a/app/templates/create_own_gestures.handlebars
+++ b/app/templates/create_own_gestures.handlebars
@@ -16,7 +16,7 @@
       <dt><code>didBegin</code></dt>
       <dd>Called when the gesture enters a began state. Called before the view receives the Start event.</dd>
       <dt><code>didChange</code></dt>
-      <dd>Called when the gesture enters a began state, and when one of the touches moves. Called before the view receives the Change event.</dd>
+      <dd>Called when the gesture enters a changed state, and when one of the touches moves. Called before the view receives the Change event.</dd>
       <dt><code>didEnd</code></dt>
       <dd>Called when the gesture enters an ended state. Called before the view receives the End event.</dd>
       <dt><code>didCancel</code></dt>
