--- a/app/templates/object_responsabilities.handlebars
+++ b/app/templates/object_responsabilities.handlebars
@@ -13,7 +13,7 @@
       <dt><code>[GESTURE_NAME]Change</code></dt>
       <dd>Sent when a gesture has already started and has received touchmove events that cause its state to change.</dd>
       <dt><code>[GESTURE_NAME]End</code></dt>
-      <dd>Sent when a touchend event is received and the gesture recognizer decides that the gesture is finished.</dd>
+      <dd>Sent when either a touchend event is received or the gesture recognizer decides that the gesture is finished.</dd>
       <dt><code>[GESTURE_NAME]Cancel</code></dt>
       <dd>Sent when a touchcancel event is received.</dd>
     </dl>
