Upgrade ember package to 1.0.0.rc.2 version - website uses the last routing API

--- a/app/templates/application.handlebars
+++ b/app/templates/application.handlebars
@@ -18,21 +18,23 @@
 
           <div class="well side-bar">
               <ul class="nav nav-list">
+
                 <li class="nav-header">Docs</li>
-                {{view App.NavItemView linkState="usingGestures" content="Using Gestures"}}
-                {{view App.NavItemView linkState="createOwnGestures" content="Create Custom Gestures"}}
-                {{view App.NavItemView linkState="handlingEvents" content="Handling Events"}}
-                {{view App.NavItemView linkState="objectResponsabilities" content="Object Responsabilities"}}
+                {{view App.NavItemView route="usingGestures" content="Using Gestures"}}
+                {{view App.NavItemView route="createOwnGestures" content="Create Custom Gestures"}}
+                {{view App.NavItemView route="handlingEvents" content="Handling Events"}}
+                {{view App.NavItemView route="objectResponsabilities" content="Object Responsabilities"}}
                 <li class="nav-header">Examples of Gestures</li>
-                {{view App.NavItemView linkState="panAndPinch" content="Pan & Pinch"}}
-                {{view App.NavItemView linkState="tapAndTouchHold" content="Tap & TouchHold"}}
-                {{view App.NavItemView linkState="swipeAndPress" content="Swipe & Press"}}
+                {{view App.NavItemView route="panAndPinch" content="Pan & Pinch"}}
+                {{view App.NavItemView route="tapAndTouchHold" content="Tap & TouchHold"}}
+                {{view App.NavItemView route="swipeAndPress" content="Swipe & Press"}}
                 <li class="nav-header">Examples of Coordination</li>
-                {{view App.NavItemView linkState="applicationGestureManager" content="Application Gesture Manager"}}
-                {{view App.NavItemView linkState="simultaneously" content="Simultaneously"}}
-                {{view App.NavItemView linkState="isEnabled" content="Gesture IsEnabled"}}
-                {{view App.NavItemView linkState="gestureDelegateRules" content="Gesture Delegate Rules"}}
-                {{view App.NavItemView linkState="gestureDelegate" content="Gesture Delegate"}}
+                {{view App.NavItemView route="applicationGestureManager" content="Application Gesture Manager"}}
+                {{view App.NavItemView route="simultaneously" content="Simultaneously"}}
+                {{view App.NavItemView route="isEnabled" content="Gesture IsEnabled"}}
+                {{view App.NavItemView route="gestureDelegateRules" content="Gesture Delegate Rules"}}
+                {{view App.NavItemView route="gestureDelegate" content="Gesture Delegate"}}
+
                 <li class="nav-header">API</li>
                 <li><a href="/api/index.html">YuiDoc</a></li>
               </ul>
