--- a/app/templates/gesture_delegate.handlebars
+++ b/app/templates/gesture_delegate.handlebars
@@ -8,7 +8,8 @@
 
 
   <div class="span6">
-    {{#view App.GestureDelegateCounterButtonView class="span10"}}
+    {{#view App.GestureDelegateCounterButtonView class="span10"
+      counterBinding="counter"}}
       Increase the counter
     {{/view}}
 
@@ -38,9 +39,10 @@
     <span class="label label-info">Code</span>
     <pre>
 var delegate = Em.GestureDelegate.create({
-    counterBinding: 'App.router.gestureDelegateController.counter',
+
     shouldReceiveTouch: function(gesture, view, event) {
-      return this.get('counter') === 0 ? false : ( this.get('counter') % 3 ) === 0;
+      var counter = view._context.get('counter');
+      return counter === 0 ? false : ( counter % 3 ) === 0;
     }
 });
 
